--- a/ApiProject/appsettings.json
+++ b/ApiProject/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=LAPTOP-0VMBTL26\\SQLEXPRESS01;Initial Catalog=BooksAndOwners;Integrated Security=True;Connect Timeout=30;Encrypt=True;Trust Server Certificate=True;Application Intent=ReadWrite;Multi Subnet Failover=False"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
