--- a/ApiProject/ApiProject.csproj
+++ b/ApiProject/ApiProject.csproj
@@ -40,4 +40,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Dto\" />
+  </ItemGroup>
+
 </Project>
